background page begone. i18n for progress bar. more messaging cleanup

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -12,5 +12,6 @@
 	"userKeyLabel": { "message": "User key" },
 	"want": { "message": "Want to see" },
 	"filmtipsetpage": { "message": "Filmtipset page" },
-	"invalidApiKey": { "message": "Invalid user API key from My Pages on Filmtipset! Verify that you have entered it exactly right!" }
+	"invalidApiKey": { "message": "Invalid user API key from My Pages on Filmtipset! Verify that you have entered it exactly right!" },
+    "progressHtml": { "message": "Processing <span id='filmLinkCount'> %linkCount% </span> IMDB links..." }
 }
